--- a/src/main/resources/templates/basic/text-basic.html
+++ b/src/main/resources/templates/basic/text-basic.html
@@ -10,3 +10,12 @@
     <li>컨텐츠 안에서 직접 출력하기 = [[${data}]]</li> </ul>
 </body>
 </html>
+
+<!--
+타임리프는 기본적으로 HTML 테그의 속성에 기능을 정의해서 동작한다.
+HTML의 콘텐츠(content)에 데이터를 출력 할 때는 다음과 같이 th:text 를 사용하면 된다. -> <span th:text="${data}">
+HTML 콘텐츠 영역안에서 직접 데이터를 출력하고 싶으면 [[...]] 를 사용하면 된다. -> [[${data}]]
+
+< -> &lt;
+> -> &gt;
+-->
